# cognitive-assistant

./: HOW-TO-RUN.md  main.py  pyproject.toml  readme.md
